--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/junction-2021-supercell-challenge/empathy#readme",
   "dependencies": {
     "discord.js": "^13.3.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "mariadb": "^2.5.5",
+    "sequelize": "^6.12.0-alpha.1"
   }
 }
