--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "googleapis": "^91.0.0",
     "mariadb": "^2.5.5",
-    "sequelize": "^6.12.0-alpha.1"
+    "sequelize": "^6.12.0-alpha.1",
+    "velocity-api": "^2.0.3"
   }
 }
