--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,8 @@
     "mariadb": "^2.5.5",
     "sequelize": "^6.12.0-alpha.1",
     "velocity-api": "^2.0.3"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4"
   }
 }
