--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# API Keys
 DISCORD_TOKEN=
 PERSPECTIVE_API_KEY=
 
@@ -8,9 +9,9 @@ MARIADB_PASS=
 MARIADB_HOST=
 
 # Message and user reporting
-MESSAGE_REPORT_THRESHOLD=
 JURY_CHANNEL_ID=
 
-# Discord REST
+# Discord IDs
 CLIENT_ID=
 GUILD_ID=
+THANKS_CHANNEL_ID=
